<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/add_payment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/add_payment"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/rupee_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/rupee_symbol"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_payment_title"/>

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:background="@drawable/et_border"
        android:textSize="20sp"
        android:textColorHint="@color/light_grey"
        android:layout_marginStart="@dimen/margin_10"
        app:layout_constraintTop_toTopOf="@id/rupee_symbol"
        app:layout_constraintBottom_toBottomOf="@id/rupee_symbol"
        app:layout_constraintStart_toEndOf="@id/rupee_symbol"/>

    <Spinner
        android:id="@+id/spinner_payment_type"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_border"
        style="@style/CustomSpinnerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_amount"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginStart="@dimen/margin_start"/>

    <EditText
        android:id="@+id/et_provider"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/provide_hint"
        android:textColor="@color/black"
        android:background="@drawable/et_border"
        android:textSize="20sp"
        android:textColorHint="@color/light_grey"
        android:maxLength="100"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_15"
        app:layout_constraintTop_toBottomOf="@id/spinner_payment_type"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_transaction_ref"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_hint"
        android:textColor="@color/black"
        android:background="@drawable/et_border"
        android:textSize="20sp"
        android:textColorHint="@color/light_grey"
        android:maxLength="100"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_15"
        app:layout_constraintTop_toBottomOf="@id/et_provider"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/cta_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_caps"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_20"
        app:backgroundTint="@null"
        android:background="@drawable/button_bg_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_transaction_ref"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cta_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@color/transparent"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/et_transaction_ref"
        app:layout_constraintEnd_toStartOf="@id/cta_ok"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>