<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/total_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount_equals"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:layout_marginTop="@dimen/main_margin_top"
                android:layout_marginStart="@dimen/margin_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/total_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/margin_text"
                app:layout_constraintBaseline_toBaselineOf="@id/total_amount_title"
                app:layout_constraintStart_toEndOf="@id/total_amount_title"
                tools:text="1250"/>

            <TextView
                android:id="@+id/title_payments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/payments"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_amount_title"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_payments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                app:singleLine="false"
                app:layout_constraintTop_toBottomOf="@id/title_payments"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="16dp"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/add_payment_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="chip_group_payments,no_payments_title"
                app:barrierDirection="bottom"/>

            <TextView
                android:id="@+id/add_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/add_payment_underlined"
                android:textColor="@color/blue_add_payment"
                android:padding="5dp"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintTop_toBottomOf="@id/add_payment_barrier"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/reset_underlined"
                android:textColor="@color/blue_add_payment"
                android:padding="5dp"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintTop_toBottomOf="@id/add_payment_barrier"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/no_payments_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/no_payments_added_yet"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_20"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_amount_title"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/cta_save_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="reset,add_payment"
                app:barrierDirection="bottom"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cta_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="@dimen/margin_20"
                android:textColor="@color/white"
                android:background="@color/grey"
                app:backgroundTint="@null"
                android:layout_marginBottom="@dimen/margin_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cta_save_barrier"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>